# jira2ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: bump_version.py
src/jira2mcp/: __init__.py  models.py
src/jira2mcp/tools/: add_link.py  comment.py  fields.py  link_types_resource.py  read.py  search.py  server.py
tests/: conftest.py  test_adf.py  test_attachment_operations.py  test_compat_shims.py  test_core_contracts.py  test_formatters.py  test_jira2cli_commands.py  test_jira2cli_output.py  test_jira2cli_parsing.py  test_jql_syntax_shared.py  test_mcp_adapter.py  test_read_metadata_operations.py  test_read_tool.py  test_utils.py  test_worklog_operations.py  test_worklog_tool.py  test_write_operations.py  test_write_validation.py
