[project]
name = "jira2ai-workspace"
version = "0.0.0"
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/jira2cli", "packages/jira2mcp"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
